[gd_scene load_steps=25 format=3 uid="uid://b3mbofunmbm52"]

[ext_resource type="Script" path="res://scenes/entity/mobs/enemys/sniper_mob/sniper_mob.gd" id="1_hniyp"]
[ext_resource type="Texture2D" uid="uid://dtep8s7c2ocro" path="res://addons/godot-prototype-texture/PNG/logo_512x512/logo_orange_512x512.png" id="2_ivao6"]
[ext_resource type="Script" path="res://components/hitbox_component/hitbox_component.gd" id="2_yjqkg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_evmjd"]
albedo_texture = ExtResource("2_ivao6")
uv1_scale = Vector3(1.815, 1.815, 1.815)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_eug3q"]
material = SubResource("StandardMaterial3D_evmjd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrf1v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xckng"]
transparency = 1
blend_mode = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_he15j"]
material = SubResource("StandardMaterial3D_xckng")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_083sf"]
emission_shape_scale = Vector3(0.5, 0.5, 0.5)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_accel_min = -2.23517e-06
radial_accel_max = 3.0
scale_min = 0.3
scale_max = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wo52u"]
albedo_color = Color(1, 0.00392157, 0, 1)
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_k3tto"]
material = SubResource("StandardMaterial3D_wo52u")

[sub_resource type="Curve" id="Curve_tfyqy"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sen51"]
curve = SubResource("Curve_tfyqy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_agt5q"]
emission_shape_scale = Vector3(0.2, 0.2, 0.2)
emission_shape = 1
emission_sphere_radius = 1.0
angular_velocity_min = -254.77
angular_velocity_max = 343.38
gravity = Vector3(0, 0, 0)
linear_accel_curve = SubResource("CurveTexture_sen51")
scale_min = 0.1
scale_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uo2m8"]
albedo_color = Color(1, 0.67451, 0, 1)
rim_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_4tycg"]
material = SubResource("StandardMaterial3D_uo2m8")

[sub_resource type="BoxShape3D" id="BoxShape3D_nx7t6"]
size = Vector3(2.25447, 1.96066, 1.10101)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0u6g4"]
radius = 28.5733

[sub_resource type="Animation" id="Animation_eq1rn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meshes/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.196402)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("meshes/GUN:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_symsq"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meshes/GUN:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(-0.388301, -3.14159, -6.17679e-08), Vector3(0, -3.14159, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_dbjub"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meshes/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mkn4f"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meshes/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 3.01593), Vector3(0, 0, 3.39467), Vector3(0, 0, 3.01593), Vector3(0, 0, 3.39467), Vector3(0, 0, 3.01593), Vector3(0, 0, 3.39467)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8naj"]
_data = {
"RESET": SubResource("Animation_eq1rn"),
"attack": SubResource("Animation_symsq"),
"idle": SubResource("Animation_dbjub"),
"walk": SubResource("Animation_mkn4f")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_2rje5"]
size = Vector3(1.96906, 1.96066, 0.558838)

[node name="sniper-enemt" type="CharacterBody3D" node_paths=PackedStringArray("NavAgent", "Animator", "target", "spawn_bullet_pos", "shoot_collider", "detect_collider", "blood_particle", "shoot_particle", "gun")]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_hniyp")
NavAgent = NodePath("NavigationAgent3D")
Mob_Type = 5
Animator = NodePath("AnimationPlayer")
target = NodePath("markers/Target")
spawn_bullet_pos = NodePath("meshes/GUN/Spawn_bullet")
shoot_collider = NodePath("meshes/GUN/shoot_collider")
detect_collider = NodePath("detect_raycast")
blood_particle = NodePath("particles/blood_particles")
shoot_particle = NodePath("particles/shoot_particles")
gun = NodePath("meshes/GUN")

[node name="meshes" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="meshes"]
transform = Transform3D(-1.94193, 0.38638, 0, -0.38638, -1.94193, 0, 0, 0, -0.388257, 0, 1, -0.144407)
mesh = SubResource("BoxMesh_eug3q")
skeleton = NodePath("../..")

[node name="GUN" type="CSGBox3D" parent="meshes"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, -1.47323e-06, 0.826, -1.25197)
size = Vector3(0.221741, 0.250854, 2.16223)
material = SubResource("StandardMaterial3D_hrf1v")

[node name="CSGBox3D2" type="CSGBox3D" parent="meshes/GUN"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13687e-13, 0.208508, -0.511368)
size = Vector3(0.221741, 0.250854, 0.230743)
material = SubResource("StandardMaterial3D_hrf1v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="meshes/GUN/CSGBox3D2"]
transform = Transform3D(0.0172067, 0, 7.27596e-12, 0, 0.0198946, 0, 0, 0, 28.0877, -3.83808e-05, -0.212228, 15.1392)
mesh = SubResource("BoxMesh_he15j")

[node name="Spawn_bullet" type="Marker3D" parent="meshes/GUN"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, -3.85439e-06, -0.015, 0.939244)

[node name="shoot_collider" type="RayCast3D" parent="meshes/GUN"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 1.70073e-06, 5.00679e-06, -1.25197)
target_position = Vector3(0, 0, -30)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="particles" type="Node3D" parent="."]

[node name="blood_particles" type="GPUParticles3D" parent="particles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25979, 0)
emitting = false
amount = 38
lifetime = 0.33
one_shot = true
process_material = SubResource("ParticleProcessMaterial_083sf")
draw_pass_1 = SubResource("BoxMesh_k3tto")

[node name="shoot_particles" type="GPUParticles3D" parent="particles"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0, 0.806, -2.29647)
emitting = false
amount = 20
lifetime = 0.07
one_shot = true
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_agt5q")
draw_pass_1 = SubResource("BoxMesh_4tycg")

[node name="markers" type="Node3D" parent="."]

[node name="Target" type="Marker3D" parent="markers"]

[node name="timers" type="Node3D" parent="."]

[node name="check_purpose" type="Timer" parent="timers"]
wait_time = 3.0
autostart = true

[node name="check_died" type="Timer" parent="timers"]
wait_time = 0.06
autostart = true

[node name="shoot_timer" type="Timer" parent="timers"]
wait_time = 0.06

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41784, 0)

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_yjqkg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0144349, 0.993838, -0.0838931)
shape = SubResource("BoxShape3D_nx7t6")

[node name="Get_Player" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Get_Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.974854, 0)
shape = SubResource("CylinderShape3D_0u6g4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8naj")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00286031, 0.993838, -0.13147)
shape = SubResource("BoxShape3D_2rje5")

[node name="detect_raycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.796092, 0)
target_position = Vector3(0, 0, -28.345)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[connection signal="timeout" from="timers/check_purpose" to="." method="_on_check_purpose_timeout"]
[connection signal="timeout" from="timers/check_died" to="." method="_on_check_died_timeout"]
[connection signal="area_entered" from="Get_Player" to="." method="_on_get_player_area_entered"]
